# glslang-prebuilt

./: .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md  make_release.sh
.github/workflows/: make_release.yml  test.yml  test.yml.disabled
glslang/: BUILD.bazel  extensions.bzl  release_info.bzl  release_info.tpl.bzl  toolchain.bzl
test/: BUILD.bazel  MODULE.bazel  glslang_rule.bzl  main.vert
