# SPDX-FileCopyrightText: 2026 Siradel
# SPDX-License-Identifier: MIT

load(":glslang_rule.bzl", "glslang_rule")
load("@bazel_skylib//rules:build_test.bzl", "build_test")

glslang_rule(
    name = "example_shader",
    src = "main.vert",
)

build_test(
    name = "build_test",
    targets = [
        ":example_shader",
    ],
)
